* Implements the use of a manual clipping mask, rather than exclusion of points outside of the plot area
* Inclusion of several new gemetries
* Compatable with a larger number of base geometries from ggplot2
* Now uses a custom rendering mask, which is added by default in the foreground, however, can be placed manually as
a layer
* Standardised the naming of the theme elements

ggtern 1.0.6.1
----------------------------------------------------------------
* Replaced the padding argument of the coord_tern constructor, with an insertion of rows and columns around the main panel in the rendering routine, with an associated theme element 'panel.margin.tern', which is distinct from and not to be confused with 'plot.margin' or 'panel.margin'
* Better logic in determining the major and minor breaks in the event that the user does not specify explicitly
* Fixed a bug in the Confidence Levels, when inf values where being generaged in the isometric log ratio calculation.
* Alterations to the theme_custom constructors, for consistency with the theme element names
* Alterations / typos fixed in documentation
* Updated the Feldspar Data, Errors were discovered, this has no bearing on the functioning of the package.
* Added some more global options, which were previously theme defaults, such as tern.vshift, tern.hshift, tern.arrowsep
* Fixed bug in label checks when handling expressions

ggtern 1.0.6.0
----------------------------------------------------------------
* Fixed bug in the rendering of coordinates axes, when not using any breaks or labels for the top axis
* Greately improved placement, padding and margin logic and use of grid
* Revised and greatly improved manual clippiing procedure for data outside the ternary surface
* Added theme_novar_tern function, many thanks to John Szumiloski
* Added geom_polygon_tern, and used it within geom_confidence and geom_density_tern
* Added the (heavily requested) contoured smoothing geometry, geom_interpolate_tern