@@ -19,9 +19,12 @@ export(GeomDensityTern)
 export(GeomErrorbarl)
 export(GeomErrorbarr)
 export(GeomErrorbart)
+export(GeomLisoprop)
 export(GeomLline)
+export(GeomRisoprop)
 export(GeomRline)
 export(GeomSmoothTern)
+export(GeomTisoprop)
 export(GeomTline)
 export(Larrowlab)
 export(Llab)
@@ -45,8 +48,11 @@ export(calc_element)
 export(coord_tern)
 export(custom_percent)
 export(element_ternary)
+export(geom_Lisoprop)
 export(geom_Lline)
+export(geom_Risoprop)
 export(geom_Rline)
+export(geom_Tisoprop)
 export(geom_Tline)
 export(geom_confidence)
 export(geom_confidence_tern)
